--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 					</ul>
 				</div>
 				<div class="navBar__buttons">
-					<button class="button button--gradient consultation__button">Get consultation</button>
-					<button href="" class="button log-in__button"><img src="img/ProfileLogInButton.svg" alt=""
-							class="log-in__img">
+					<button class="button--gradient consultation__button">Get consultation</button>
+					<button href="" class="button__invis log-in__button"><img src="img/ProfileLogInButton.svg" alt=""
+							class="double__img">
 						Log in / Register</button>
 				</div>
 			</div>
@@ -74,8 +74,8 @@
 			<div class="main__about">
 				<img src="img/about__girl.jpg" alt="" class="about_girl">
 				<div class="about__group1">
-					<p class="about__text">Who we are</p>
-					<h2 class="about__header">Why Createx?</h2>
+					<p class="text-small">Who we are</p>
+					<h2 class="header__text">Why Createx?</h2>
 					<ul class="about__ul">
 						<li class="about__list">
 							A fermentum in morbi pretium
@@ -99,13 +99,13 @@
 			</div>
 			<div class="main__courses">
 				<div class="courses__header__group">
-					<div class="courses__text">Ready to learn?</div>
-					<div class="courses__header">Featured Courses</div>
+					<div class="text-small courses__text">Ready to learn?</div>
+					<div class="header__text courses__header">Featured Courses</div>
 					<button class="button button--clear courses__button">View all courses</button>
 				</div>
 				<div class="courses__cards">
 					<div class="courses__card card--marketing">
-						<img src="img/courses__marketing.jpg" alt="" class="card__img">
+						<img src="img/JeromeBell__marketing.jpg" alt="" class="card__img">
 						<div class="courses__card__group">
 							<h3 class="card__header card__header--marketing">Marketing</h3>
 							<p class="card__text">The Ultimate Google Ads Training Course</p>
@@ -116,7 +116,7 @@
 						</div>
 					</div>
 					<div class="courses__card card--managment">
-						<img src="img/courses__management.jpg" alt="" class="card__img">
+						<img src="img/MarvinMcKinney__management.jpg" alt="" class="card__img">
 						<div class="courses__card__group2">
 							<h3 class="card__header card__header--management">Management</h3>
 							<p class="card__text">Prduct Management Fundamentals</p>
@@ -127,7 +127,7 @@
 						</div>
 					</div>
 					<div class="courses__card card--hr">
-						<img src="img/courses__hr.jpg" alt="" class="card__img">
+						<img src="img/LeslieAlexanderLi__hr.jpg" alt="" class="card__img">
 						<div class="courses__card__group3">
 							<h3 class="card__header card__header--hr">HR & Recruting</h3>
 							<p class="card__text">HR Management and Analytics</p>
@@ -138,7 +138,7 @@
 						</div>
 					</div>
 					<div class="courses__card card--marketing">
-						<img src="img/courses__marketing--girl.jpg" alt="" class="card__img">
+						<img src="img/KristinWatson__marketing.jpg" alt="" class="card__img">
 						<div class="courses__card__group">
 							<h3 class="card__header card__header--marketing">Marketing</h3>
 							<p class="card__text">Brand Management & PR Communications</p>
@@ -149,7 +149,7 @@
 						</div>
 					</div>
 					<div class="courses__card card--managment">
-						<img src="img/courses__management--girl.jpg" alt="" class="card__img">
+						<img src="img/DianneRussell__management.jpg" alt="" class="card__img">
 						<div class="courses__card__group2">
 							<h3 class="card__header card__header--management">Management</h3>
 							<p class="card__text">Business Development<br> Management</p>
@@ -160,7 +160,7 @@
 						</div>
 					</div>
 					<div class="courses__card card--design">
-						<img src="img/courses__design.jpg" alt="" class="card__img">
+						<img src="img/GuyHawkins__design.jpg" alt="" class="card__img">
 						<div class="courses__card__group4">
 							<h3 class="card__header card__header--design">Design</h3>
 							<p class="card__text">Graphic Design Basic</p>
@@ -172,8 +172,170 @@
 					</div>
 				</div>
 			</div>
+			<div class="main__benefits">
+				<p class="text-small text-small-center">Our benefits</p>
+				<h2 class="header__text header__text-center">That’s how we do it</h2>
+				<div class="benefits__buttons">
+					<button class="benefits__button-width button--clear button--double"><img
+							src="img/benefits__button-star.svg" alt="" class="double__img" class="double__img">
+						Experienced
+						Tutors</button>
+					<button class="benefits__button-width button__invis button--double"><img
+							src="img/benefits__button-feedback.svg" alt="" class="double__img">Feedback
+						& Support</button>
+					<button class="benefits__button-width button__invis button--double"><img
+							src="img/benefits__button-online.svg" alt="" class="double__img">24/7
+						Online Library</button>
+					<button class="benefits__button-width button__invis button--double"><img
+							src="img/benefits__nutton-community.svg" alt="" class="double__img">Community</button>
+				</div>
+				<div class="benefits__body">
+					<div class="benefits__group1">
+						<h3 class="benefits__h3">Only practicing tutors</h3>
+						<p class="benefits__text">Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum
+							suspendisse. Morbi mauris cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit
+							diam
+							mi amet massa. Fermentum diam diam sociis vestibulum. Nulla nisl accumsan, id dignissim massa ut
+							amet.
+							Amet enim, nisi tempus vehicula.</p>
+					</div>
+					<img src="img/benefits__illustration.svg" alt="" class="benefits__img">
+				</div>
+			</div>
 		</div>
 	</div>
+	<div class="main-beige">
+		<div class="main__body">
+			<p class="text-small-center text-small">Our Events</p>
+			<h2 class="header__text-center header__text">Lectures & workshops</h2>
+			<div class="event__card">
+				<div class="event__group1 event__card__group1">
+					<p class="event__date">August </p>
+					<p class="event__time">11:00 – 14:00</p>
+				</div>
+				<div class="event__group2">
+					<div class="event__text">Formation of the organizational structure of the company in the face of
+						uncertainty.</div>
+					<div class="event__class">Onine master-class</div>
+				</div>
+				<div class="event__group3">
+					<div class="event__button button--clear">View more</div>
+				</div>
+			</div>
+			<div class="event__card evnet__card2">
+				<div class="event__group1 event__card2__group1">
+					<p class="event__date">July</p>
+					<p class="event__time">11:00 – 12:30</p>
+				</div>
+				<div class="event__group2">
+					<div class="event__text">Building a customer service department. Best Practices.</div>
+					<div class="event__class">Onine lecture</div>
+				</div>
+				<div class="event__group3">
+					<div class="event__button button--clear">View more</div>
+				</div>
+			</div>
+			<div class="event__card event__card3">
+				<div class="event__group1 event__card3__group1">
+					<p class="event__date">July</p>
+					<p class="event__time">10:00 – 13:00</p>
+				</div>
+				<div class="event__group2">
+					<div class="event__text">How to apply methods of speculative design in practice. Worldbuilding
+						prototyping.</div>
+					<div class="event__class">Onine workshop</div>
+				</div>
+				<div class="event__group3">
+					<div class="event__button button--clear">View more</div>
+				</div>
+			</div>
+			<div class="footer-bigue">
+				<p class="footer__text-bigue">Do you want more?</p>
+				<button class="footer__button-bigue button--gradient">Explore all events</button>
+			</div>
+
+		</div>
+	</div>
+	<div class="container">
+		<div class="certificate__body">
+			<div class="certificate__group1">
+				<p class="text-small">Createx Certificate</p>
+				<h2 class="header__text">Your expertise will<br> be confirmed</h2>
+				<p class="certificate__text">We are accredited by international professional organizations and
+					institutes:
+				</p>
+				<div class="certificate__img__group">
+					<img src="img/certificate__logo-strategy.jpg" alt="" class="certificate__img">
+					<img src="img/certificate__logo-consulting.png" alt="" class="certificate__img">
+					<img src="img/certificate__logo-health.png" alt="" class="certificate__img">
+				</div>
+			</div>
+			<div class="certificate__group2">
+				<img src="img/certificate__img.png" alt="" class="certificate__main__img">
+			</div>
+		</div>
+		<div class="body-gray">
+			<div class="team__body">
+				<div id="carousel" class="team__carousel">
+					<p class="text-small team__text">Best tutors are all here</p>
+					<h2 class="header__text team__header">Meet our team</h2>
+					<button class="arrow next">→</button>
+					<div class="gallery">
+						<ul>
+							<li>
+								<img src="img/dianne.png" class="team__img">
+								<p class="team__name">Dianne Russell</p>
+								<p class="prof">Founder and CEO</p>
+							</li>
+							<li>
+								<img src="img/jerome.png" class="team__img">
+								<p class="team__name">Dianne Russell</p>
+								<p class="prof">Founder and CEO</p>
+							</li>
+							<li>
+								<img src="img/kristin.png" class="team__img">
+								<p class="team__name">Dianne Russell</p>
+								<p class="prof">Founder and CEO</p>
+							</li>
+							<li>
+								<img src="img/marvin.png" class="team__img">
+								<p class="team__name">Dianne Russell</p>
+								<p class="prof">Founder and CEO</p>
+							</li>
+							<li>
+								<img src="img/leslie.png" class="team__img">
+								<p class="team__name">Dianne Russell</p>
+								<p class="prof">Founder and CEO</p>
+							</li>
+							<li>
+								<img src="img/kathryn.png" class="team__img">
+								<p class="team__name">Dianne Russell</p>
+								<p class="prof">Founder and CEO</p>
+							</li>
+							<li>
+								<img src="img/brooklyn.png" class="team__img">
+								<p class="team__name">Dianne Russell</p>
+								<p class="prof">Founder and CEO</p>
+							</li>
+							<li>
+								<img src="img/cody.png" class="team__img">
+								<p class="team__name">Dianne Russell</p>
+								<p class="prof">Founder and CEO</p>
+							</li>
+
+						</ul>
+					</div>
+					<button class="arrow prev">←</button>
+				</div>
+			</div>
+			<div class="testimonials__body">
+				<p class="text-small-center text-small">Testimonials</p>
+				<h2 class="header__text-center header__text">What our students say</h2>
+
+			</div>
+		</div>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script src="script/script.js"></script>
 </body>
 
 </html>
