--- a/index.html
+++ b/index.html
@@ -328,14 +328,249 @@
 					<button class="arrow prev">←</button>
 				</div>
 			</div>
-			<div class="testimonials__body">
+
+			<!-- FEEDBACK КАРУСЕЛЬ! ПРОБЛЕМА СО СТРЕЛКАМИ
+				 <div class="testimonials__body">
 				<p class="text-small-center text-small">Testimonials</p>
 				<h2 class="header__text-center header__text">What our students say</h2>
 
+				<div class="testimonials__carousel__body">'
+					<div id="testimonials__carousel" class="testimonials__carousel">
+						<button class="arrow testimonials__arrow__prev">←</button>
+						<div class="testimonials__gallery">
+							<ul>
+								<li>
+									<p class="carousel__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo,
+										amet
+										lectus
+										quam viverra<br>
+										mus lobortis fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis
+										tempus<br>
+										ornare
+										turpis quis non. Congue tortor in euismod vulputate etiam eros. Pulvinar neque<br>
+										pharetra
+										arcu diam
+										maecenas diam integer in.</p>
+									<div class="testimonials__gallery__group1">
+										<img src="img/carausel__comm__img.png">
+										<div class="testimonials__gallery__group2">
+											<p class="feedback__name">Eleanor Pena</p>
+											<p class="feedback__prof">Position, Course</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<p class="carousel__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo,
+										amet
+										lectus
+										quam viverra<br>
+										mus lobortis fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis
+										tempus<br>
+										ornare
+										turpis quis non. Congue tortor in euismod vulputate etiam eros. Pulvinar neque<br>
+										pharetra
+										arcu diam
+										maecenas diam integer in.</p>
+									<div class="testimonials__gallery__group1">
+										<img src="img/carausel__comm__img.png">
+										<div class="testimonials__gallery__group2">
+											<p class="feedback__name">Eleanor Pena</p>
+											<p class="feedback__prof">Position, Course</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<p class="carousel__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo,
+										amet
+										lectus
+										quam viverra<br>
+										mus lobortis fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis
+										tempus<br>
+										ornare
+										turpis quis non. Congue tortor in euismod vulputate etiam eros. Pulvinar neque<br>
+										pharetra
+										arcu diam
+										maecenas diam integer in.</p>
+									<div class="testimonials__gallery__group1">
+										<img src="img/carausel__comm__img.png">
+										<div class="testimonials__gallery__group2">
+											<p class="feedback__name">Eleanor Pena</p>
+											<p class="feedback__prof">Position, Course</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<p class="carousel__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo,
+										amet
+										lectus
+										quam viverra<br>
+										mus lobortis fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis
+										tempus<br>
+										ornare
+										turpis quis non. Congue tortor in euismod vulputate etiam eros. Pulvinar neque<br>
+										pharetra
+										arcu diam
+										maecenas diam integer in.</p>
+									<div class="testimonials__gallery__group1">
+										<img src="img/carausel__comm__img.png">
+										<div class="testimonials__gallery__group2">
+											<p class="feedback__name">Eleanor Pena</p>
+											<p class="feedback__prof">Position, Course</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<p class="carousel__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo,
+										amet
+										lectus
+										quam viverra<br>
+										mus lobortis fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id turpis
+										tempus<br>
+										ornare
+										turpis quis non. Congue tortor in euismod vulputate etiam eros. Pulvinar neque<br>
+										pharetra
+										arcu diam
+										maecenas diam integer in.</p>
+									<div class="gallery__group1">
+										<img src="img/carausel__comm__img.png">
+										<div class="gallery__group2">
+											<p class="feedback__name">Eleanor Pena</p>
+											<p class="feedback__prof">Position, Course</p>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+						<button class="arrow testimonials__arrow__next">→</button>
+					</div>
+				</div>
+			-->
+		</div>
+		<div class="blog">
+			<div class="blog__header">
+				<div class="blog__header__group1">
+					<p class="text-small">Our blog</p>
+					<h2 class="header__text blog__header__text">Latest posts</h2>
+				</div>
+				<button class="button button--gradient blog__button">Go to blog</button>
+			</div>
+			<div class="blog__body">
+				<div class="blog__listens">
+					<div class="blog__listen1">
+						<img src="img/blog__marketing-podcast.png" alt="" class="blog__img blog__img__marketing">
+						<ul class="blog__ul">
+							<li class="blog__li">Marketing</li>
+							<li class="blog__li blog__li-date">September 4, 2020</li>
+							<li class="blog__li blog__li-time">36 min</li>
+						</ul>
+						<p class="blog__text">What is traffic arbitrage and does it<br> really make money?</p>
+						<p class="blog__text__footer">Pharetra, ullamcorper iaculis viverra parturient sed id<br> sed.
+							Convallis
+							proin
+							dignissim lacus, purus gravida...</p>
+						<a href="" class="blog__a">Listen</a>
+					</div>
+					<div class="blog__listen2">
+						<img src="img/blog__management-video.png" alt="" class="blog__img blog__img__marketing">
+						<ul class="blog__ul">
+							<li class="blog__li">Management</li>
+							<li class="blog__li blog__li-date">August 25, 2020</li>
+							<li class="blog__li blog__li-time">45 min</li>
+						</ul>
+						<p class="blog__text">What to do and who to talk to if you<br> want to get feedback on the product</p>
+						<p class="blog__text__footer">Neque a, senectus consectetur odio in aliquet nec eu.<br> Ultricies ac
+							nibh
+							urna urna sagittis faucibus...</p>
+						<a href="" class="blog__a">Watch</a>
+					</div>
+					<div class="blog__listen3">
+						<img src="img/blog_design.png" alt="" class="blog__img blog__img__marketing">
+						<ul class="blog__ul">
+							<li class="blog__li">Design</li>
+							<li class="blog__li blog__li-date">August 8, 2020</li>
+						</ul>
+						<p class="blog__text">Should you choose a creative profession<br> if you are attracted to
+							creativity?</p>
+						<p class="blog__text__footer">Curabitur nisl tincidunt eros venenatis vestibulum ac<br> placerat.
+							Tortor,
+							viverra sed vulputate ultrices...</p>
+						<a href="" class="blog__a">Read</a>
+					</div>
+				</div>
+
 			</div>
 		</div>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		<script src="script/script.js"></script>
+		<div class="main-beige">
+			<p class="text-small-center text-small">Don’t miss anything</p>
+			<h2 class="header__text-center header__text">Subscribe to the Createx School<br> announcements</h2>
+			<div class="subscribe__body">
+				<input type="text" class="searchButton" placeholder="Your working email">
+				<button class="button button--gradient subscribe__button">Subscribe</button>
+			</div>
+		</div>
+		<footer>
+			<div class="footer__info">
+				<div class="footer__info__groups">
+					<div class="footer__info_group1">
+						<img src="img/logo-white.svg" alt="" class="footer__logo">
+						<p class="footer__p">Createx Online School is a leader in online studying. We have lots of courses and
+							programs from the main market experts. We provide relevant approaches to online learning,
+							internships and employment in the largest companies in the country. </p>
+						<div class="footer__media">
+							<img src="img/facebook.svg" alt="" class="footer__img">
+							<img src="img/twitter.svg" alt="" class="footer__img">
+							<img src="img/youTube.svg" alt="" class="footer__img">
+							<img src="img/telegram.svg" alt="" class="footer__img">
+							<img src="img/instagram.svg" alt="" class="footer__img">
+							<img src="img/linkedIn.svg" alt="" class="footer__img">
+						</div>
+					</div>
+					<div class="footer__info_group2">
+						<h3 class="footer__h3">SITE MAP</h3>
+						<ul class="footer__ul">
+							<li class="footer__li">About Us</li>
+							<li class="footer__li">Courses</li>
+							<li class="footer__li">Events</li>
+							<li class="footer__li">Blog</li>
+							<li class="footer__li">Contacts</li>
+						</ul>
+
+					</div>
+					<div class="footer__info_group3">
+						<h3 class="footer__h3">COURSES</h3>
+						<ul class="footer__ul">
+							<li class="footer__li">Marketing</li>
+							<li class="footer__li">Management</li>
+							<li class="footer__li">HR & Recruting</li>
+							<li class="footer__li">Design</li>
+							<li class="footer__li">Development</li>
+						</ul>
+
+					</div>
+					<div class="footer__info_group4">
+						<h3 class="footer__h3">CONTACT US</h3>
+						<ul class="footer__ul">
+							<li class="footer__li footer__li-phone">(405) 555-0128</li>
+							<li class="footer__li footer__li-mail">hello@createx.com</li>
+						</ul>
+					</div>
+					<div class="footer__info_group5">
+						<h3 class="footer__h3">SIGN UP TO OUR NEWSLETTER</h3>
+						<input type="text" class="footer__searchButton" placeholder="Email address">
+						<p class="footer__p footer__p-small">*Subscribe to our newsletter to receive communications and early
+							updates from Createx SEO Agency.</p>
+					</div>
+				</div>
+			</div>
+			<div class="footer">
+				<p class="made__p">© All rights reserved. Made with by Createx Studio</p>
+				</p>
+				<div class="goTop">GO TO TOP</div>
+			</div>
+		</footer>
+	</div>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script src="script/script.js"></script>
 </body>
 
 </html>
