--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 				<p class="text-small text-small-center">Our benefits</p>
 				<h2 class="header__text header__text-center">That’s how we do it</h2>
 				<div class="benefits__buttons">
-					<button class="benefits__button-width button--clear button--double"><img
+					<button class="benefits__button-width button--clear button--double benefits__button-star"><img
 							src="img/benefits__button-star.svg" alt="" class="double__img" class="double__img">
 						Experienced
 						Tutors</button>
@@ -261,7 +261,7 @@
 			<div class="certificate__group1">
 				<p class="text-small">Createx Certificate</p>
 				<h2 class="header__text">Your expertise will<br> be confirmed</h2>
-				<p class="certificate__text">We are accredited by international professional organizations and
+				<p class="certificate__text">We are accredited by international professional<br> organizations and
 					institutes:
 				</p>
 				<div class="certificate__img__group">
