--- a/index.html
+++ b/index.html
@@ -530,7 +530,10 @@
 			<div class="subscribe__body">
 				<input type="text" class="searchButton" placeholder="Your working email">
 				<a href=""><button class="button button--gradient subscribe__button">Subscribe</button></a>
+
 			</div>
+			<img src="img/sibscribe__img.png" alt="" class="sibscribe__img">
+			<img src="img/sibscribe__img.png" alt="">
 		</div>
 		<footer>
 			<div class="footer__info">
