--- a/index.html
+++ b/index.html
@@ -295,56 +295,56 @@
 					<button class="arrow next">→</button>
 					<div class="gallery">
 						<ul>
-							<a href="">
+							<a href="codyFisher__courses.html">
 								<li>
 									<img src="img/dianne.png" class="team__img">
 									<p class="team__name">Dianne Russell</p>
 									<p class="prof">Founder and CEO</p>
 								</li>
 							</a>
-							<a href="">
+							<a href="codyFisher__courses.html">
 								<li>
 									<img src="img/jerome.png" class="team__img">
 									<p class="team__name">Dianne Russell</p>
 									<p class="prof">Founder and CEO</p>
 								</li>
 							</a>
-							<a href="">
+							<a href="codyFisher__courses.html">
 								<li>
 									<img src="img/kristin.png" class="team__img">
 									<p class="team__name">Dianne Russell</p>
 									<p class="prof">Founder and CEO</p>
 								</li>
 							</a>
-							<a href="">
+							<a href="codyFisher__courses.html">
 								<li>
 									<img src="img/marvin.png" class="team__img">
 									<p class="team__name">Dianne Russell</p>
 									<p class="prof">Founder and CEO</p>
 								</li>
 							</a>
-							<a href="">
+							<a href="codyFisher__courses.html">
 								<li>
 									<img src="img/leslie.png" class="team__img">
 									<p class="team__name">Dianne Russell</p>
 									<p class="prof">Founder and CEO</p>
 								</li>
 							</a>
-							<a href="">
+							<a href="codyFisher__courses.html">
 								<li>
 									<img src="img/kathryn.png" class="team__img">
 									<p class="team__name">Dianne Russell</p>
 									<p class="prof">Founder and CEO</p>
 								</li>
 							</a>
-							<a href="">
+							<a href="codyFisher__courses.html">
 								<li>
 									<img src="img/brooklyn.png" class="team__img">
 									<p class="team__name">Dianne Russell</p>
 									<p class="prof">Founder and CEO</p>
 								</li>
 							</a>
-							<a href="">
+							<a href="codyFisher__courses.html">
 								<li>
 									<img src="img/cody.png" class="team__img">
 									<p class="team__name">Dianne Russell</p>
@@ -532,8 +532,10 @@
 				<a href=""><button class="button button--gradient subscribe__button">Subscribe</button></a>
 
 			</div>
-			<img src="img/sibscribe__img.png" alt="" class="sibscribe__img">
-			<img src="img/sibscribe__img.png" alt="">
+			<div class="sibscribe__img__group">
+				<img src="img/sibscribe__img.png" alt="" class="sibscribe__img">
+				<img src="img/sibscribe__img.png" alt="">
+			</div>
 		</div>
 		<footer>
 			<div class="footer__info">
