--- a/courses.html
+++ b/courses.html
@@ -150,7 +150,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="courses.html">
+				<a href="codyFisher__courses.html">
 					<div class="our__courses__card card--managment">
 						<img src="img/our__cody.jpg" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
@@ -191,8 +191,10 @@
 			<input type="text" class="searchButton" placeholder="Your working email">
 			<a href=""><button class="button button--gradient subscribe__button">Subscribe</button></a>
 		</div>
-		<img src="img/sibscribe__img.png" alt="" class="sibscribe__img">
-		<img src="img/sibscribe__img.png" alt="">
+		<div class="sibscribe__img__group">
+			<img src="img/sibscribe__img.png" alt="" class="sibscribe__img">
+			<img src="img/sibscribe__img.png" alt="">
+		</div>
 	</div>
 	<footer>
 		<div class="footer__info">
@@ -267,6 +269,8 @@
 			</div>
 		</div>
 	</footer>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script src="script/script.js"></script>
 </body>
 
 
