--- a/codyFisher__courses.html
+++ b/codyFisher__courses.html
@@ -106,8 +106,305 @@
 					<img src="img/in.svg" alt="" class="teacher__media__img">
 				</div>-->
 			</div>
+
+		</div>
+		<div class="teacher__steps">
+			<p class="text-small-center text-small">Main steps</p>
+			<h2 class="header__text-center header__text">Online learning process</h2>
+			<div class="teacher__steps__group">
+				<div class="teacher__step teacher__step1">
+
+					<h3 class="steps__header">Watching online video lectures</h3>
+					<p class="steps__text">Culpa nostrud commodo ea consequat aliquip reprehenderit. Veniam velit nostrud
+						aliquip sunt.</p>
+				</div>
+				<div class="teacher__step teacher__step2">
+					<h3 class="steps__header">Passing test</h3>
+					<p class="steps__text">Anim reprehenderit sint voluptate exercitation adipisicing laborum adipisicing.
+						Minim ad tempor est ea.</p>
+				</div>
+				<div class="teacher__step teacher__step3">
+					<h3 class="steps__header">Curator’s feedback</h3>
+					<p class="steps__text">Adipisicing esse aliqua aliquip qui amet. Aute eiusmod dolore dolore et ad et
+						veniam ad deserunt.</p>
+				</div>
+				<div class="teacher__step teacher__step4">
+					<h3 class="steps__header">Corrections if needed</h3>
+					<p class="steps__text">Sit veniam aute dolore adipisicing nulla sit culpa. Minim mollit voluptate ullamco
+						proident ea ad.</p>
+				</div>
+			</div>
+		</div>
+		<div class="main-beige dicount__beige">
+			<div class="teacher__discount">
+				<h2 class="discount__header">20% discount for early birds!</h2>
+				<div class="discount__groups">
+					<div class="discount__group">
+						<div class="discount__text">Full name</div>
+						<input type="text" class="discount__input" placeholder="Your full name">
+					</div>
+					<div class="discount__group">
+						<div class="discount__text">Email</div>
+						<input type="text" class="discount__input" placeholder="Your working email">
+					</div>
+					<div class="discount__group">
+						<div class="discount__text">Phone</div>
+						<input type="text" class="discount__input" placeholder="Your phone number">
+					</div>
+					<a href=""><button class="button button--gradient discount__button">Join the course</button></a>
+				</div>
+			</div>
+		</div>
+		<div class="teacher__who">
+			<div class="who__group1">
+				<p class="text-small">For whom?</p>
+				<h2 class="header__text">Who will benefit from the course:</h2>
+			</div>
+			<div class="who__group2">
+				<ul class="about__ul">
+					<li class="about__list who__about__list">Mobile app designers who want to improve their skills in solving
+						business
+						problems, creating and testing human-centered interfaces</li>
+					<li class="about__list">Specialists with more than 1 year of active work experience</li>
+
+					<li class="about__list">
+						Potes aedificare immune ratiobibendum id viverra.
+					</li>
+					<li class="about__list">Professional designers who want to feel more confident in UX</li>
+					<li class="about__list">Specialists who would like to structure their knowledge, fill in the gaps</li>
+				</ul>
+			</div>
+		</div>
+		<div class="teacher__program">
+			<div class="program__group1">
+				<p class="text-small">Course program</p>
+				<h2 class="header__text">What will you learn</h2>
+				<h4 class="program__lessons programm__lesson1">
+					<span class="program__lessons__red"> Lesson 1. </span>Aliquet lectus urna viverra in odio.
+				</h4>
+				<h4 class="program__lessons programm__lesson2"><span class="program__lessons__red"> Lesson 2. </span> Orci
+					commodo, viverra orci mollis ut euismod.</h4>
+				<h4 class="program__lessons programm__lesson3"><span class="program__lessons__red"> Lesson 3. </span>
+					Sagittis vitae facilisi rutrum amet mauris quisque
+					vel.</h4>
+				<h4 class="program__lessons programm__lesson4"><span class="program__lessons__red"> Lesson 4. </span> In id
+					dolor quis nunc, urna hendrerit pharetra.
+				</h4>
+				<h4 class="program__lessons programm__lesson5"><span class="program__lessons__red"> Lesson 5. </span> Est,
+					ut tempus id rutrum facilisi.</h4>
+				<h4 class="program__lessons programm__lesson6"><span class="program__lessons__red"> Lesson 6. </span> Amet
+					nec in pellentesque.</h4>
+				<h4 class="program__lessons programm__lesson7"><span class="program__lessons__red"> Lesson 7. </span> Massa
+					vel arcu mauris, id vel rhoncus mattis quis.
+				</h4>
+				<h4 class="program__lessons programm__lesson8"><span class="program__lessons__red"> Lesson 8. </span> Neque,
+					cursus sapien nullam id.</h4>
+			</div>
+			<img src="img/teacher__program__img.png" alt="" class="program__img">
 		</div>
 	</div>
+	<div class="body-gray">
+		<div class="our__container">
+			<div class="teacher__register">
+				<img src="img/teacher__register.png" alt="" class="teacher__register__img">
+				<div class="register__group">
+					<p class="text-small">Leave a request now and get 20% off!</p>
+					<h2 class="header__text">Register for the course</h2>
+					<div class="register__discount__groups ">
+						<div class="discount__group">
+							<div class="discount__text">Full name</div>
+							<input type="text" class="register__discoutn__input discount__input" placeholder="Your full name">
+						</div>
+						<div class="discount__group">
+							<div class="discount__text">Email</div>
+							<input type="text" class="register__discoutn__input discount__input"
+								placeholder="Your working email">
+						</div>
+						<div class="discount__group">
+							<div class="discount__text">Phone</div>
+							<input type="text" class="register__discoutn__input discount__input"
+								placeholder="Your phone number">
+						</div>
+						<a href=""><button class="button button--gradient register__discount__button">Join the
+								course</button></a>
+					</div>
+
+				</div>
+			</div>
+
+		</div>
+	</div>
+	<!--
+
+	
+	<div class="our__container">
+		<div class="teacher__otherCourses">
+			<p class="text-small">Check other courses</p>
+			<h2 class="header__text">You may also like</h2>
+			<button class="arrow next">→</button>
+			<div class="teacher__gallery gallery">
+				<ul>
+					<div class="teacher__courses__card courses__card card--marketing">
+						<img src="img/JeromeBell__marketing.jpg" alt="" class="card__img">
+						<div class="courses__card__group">
+							<h3 class="card__header card__header--marketing">Marketing</h3>
+							<p class="card__text">The Ultimate Google Ads Training Course</p>
+							<div class="card__group--name--prise">
+								<p class="card__prise">$100</p>
+								<p class="card__name"> by Jerome Bell</p>
+							</div>
+						</div>
+					</div>
+					<div class="teacher__courses__card courses__card card--managment">
+						<img src="img/MarvinMcKinney__management.jpg" alt="" class="card__img">
+						<div class="courses__card__group">
+							<h3 class="card__header card__header--management">Management</h3>
+							<p class="card__text">Prduct Management Fundamentals</p>
+							<div class="card__group--name--prise">
+								<p class="card__prise">$480</p>
+								<p class="card__name">by Marvin McKinney</p>
+							</div>
+						</div>
+					</div>
+					<div class="teacher__courses__card courses__card card--hr">
+						<img src="img/LeslieAlexanderLi__hr.jpg" alt="" class="card__img">
+						<div class="courses__card__group">
+							<h3 class="card__header card__header--hr">HR & Recruting</h3>
+							<p class="card__text">HR Management and Analytics</p>
+							<div class="card__group--name--prise">
+								<p class="card__prise">$200</p>
+								<p class="card__name">by Leslie Alexander Li</p>
+							</div>
+						</div>
+					</div>
+					<div class="courses__card card--marketing">
+						<img src="img/KristinWatson__marketing.jpg" alt="" class="card__img">
+						<div class="courses__card__group">
+							<h3 class="card__header card__header--marketing">Marketing</h3>
+							<p class="card__text">Brand Management & PR Communications</p>
+							<div class="card__group--name--prise">
+								<p class="card__prise">$530</p>
+								<p class="card__name">by Kristin Watson</p>
+							</div>
+						</div>
+					</div>
+					<div class="courses__card card--managment">
+						<img src="img/DianneRussell__management.jpg" alt="" class="card__img">
+						<div class="courses__card__group">
+							<h3 class="card__header card__header--management">Management</h3>
+							<p class="card__text">Business Development<br> Management</p>
+							<div class="card__group--name--prise">
+								<p class="card__prise">$400</p>
+								<p class="card__name">by Dianne Russell</p>
+							</div>
+						</div>
+					</div>
+					<div class="courses__card card--design">
+						<img src="img/GuyHawkins__design.jpg" alt="" class="card__img">
+						<div class="courses__card__group4">
+							<h3 class="card__header card__header--design">Design</h3>
+							<p class="card__text">Graphic Design Basic</p>
+							<div class="card__group--name--prise">
+								<p class="card__prise">$500</p>
+								<p class="card__name">by Guy Hawkins</p>
+							</div>
+						</div>
+					</div>
+					<a href="codyFisher__courses.html">
+						<li>
+							<img src="img/brooklyn.png" class="team__img">
+							<p class="team__name">Dianne Russell</p>
+							<p class="prof">Founder and CEO</p>
+						</li>
+					</a>
+					<a href="codyFisher__courses.html">
+						<li>
+							<img src="img/cody.png" class="team__img">
+							<p class="team__name">Dianne Russell</p>
+							<p class="prof">Founder and CEO</p>
+						</li>
+					</a>
+				</ul>
+			</div>
+			<button class="arrow prev">←</button>
+		</div>
+	</div>
+	-->
+	<footer>
+		<div class="footer__info">
+			<div class="footer__info__groups">
+				<div class="footer__info_group1">
+					<img src="img/logo-white.svg" alt="" class="footer__logo">
+					<p class="footer__p">Createx Online School is a leader in online studying. We have lots of courses and
+						programs from the main market experts. We provide relevant approaches to online learning,
+						internships and employment in the largest companies in the country. </p>
+					<div class="footer__media">
+						<a href=""><img src="img/facebook.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="img/twitter.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="img/youTube.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="img/telegram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="img/instagram.svg" alt="" class="footer__img"></a>
+						<a href=""><img src="img/linkedIn.svg" alt="" class="footer__img"></a>
+					</div>
+				</div>
+				<div class="footer__info_group2">
+					<h3 class="footer__h3">SITE MAP</h3>
+					<ul class="footer__ul">
+						<a href="">
+							<li class="footer__li">About Us</li>
+						</a>
+						<a href="courses.html">
+							<li class="footer__li">Courses</li>
+						</a>
+						<a href="">
+							<li class="footer__li">Events</li>
+						</a>
+						<a href="">
+							<li class="footer__li">Blog</li>
+						</a>
+						<a href="">
+							<li class="footer__li">Contacts</li>
+						</a>
+					</ul>
+				</div>
+				<div class="footer__info_group3">
+					<h3 class="footer__h3">COURSES</h3>
+					<ul class="footer__ul">
+						<li class="footer__li">Marketing</li>
+						<li class="footer__li">Management</li>
+						<li class="footer__li">HR & Recruting</li>
+						<li class="footer__li">Design</li>
+						<li class="footer__li">Development</li>
+					</ul>
+				</div>
+				<div class="footer__info_group4">
+					<h3 class="footer__h3">CONTACT US</h3>
+					<ul class="footer__ul">
+						<li class="footer__li footer__li-phone">(405) 555-0128</li>
+						<li class="footer__li footer__li-mail">hello@createx.com</li>
+					</ul>
+				</div>
+				<div class="footer__info_group5">
+					<h3 class="footer__h3">SIGN UP TO OUR NEWSLETTER</h3>
+					<input type="text" class="footer__searchButton" placeholder="Email address">
+					<p class="footer__p footer__p-small">*Subscribe to our newsletter to receive communications and early
+						updates from Createx SEO Agency.</p>
+				</div>
+			</div>
+		</div>
+		<div class="footer">
+			<div class="footer__group1">
+				<p class="made__p">© All rights reserved. Made with</p>
+				<p class="made__p made__p-heart">by Createx Studio</p>
+				</p>
+			</div>
+			<div id="goTop">
+				<div class="goTop">GO TO TOP</div>
+			</div>
+		</div>
+	</footer>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script src="script/script.js"></script>
 </body>
 
 </html>
