--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
 				<div class="navBar__group1">
 					<img src="img/logo.svg" alt="" class="logo navBar__logo">
 					<ul class="navBar__menu">
-						<li><a href="" class="navBar__text">About Us</a></li>
+						<li><a href="aboutUs.html" class="navBar__text">About Us</a></li>
 						<li><a href="courses.html" class="navBar__text">Courses</a></li>
-						<li><a href="" class="navBar__text">Events</a></li>
-						<li><a href="" class="navBar__text">Blog</a></li>
+						<li><a href="events.html" class="navBar__text">Events</a></li>
+						<li><a href="blog.html" class="navBar__text">Blog</a></li>
 						<li><a href="" class="navBar__text">Contacts</a></li>
 					</ul>
 				</div>
 				<div class="navBar__buttons">
 					<button class="button--gradient consultation__button"><a href="">Get consultation</a></button>
-					<button href="" class="button__invis log-in__button"><a href=""><img src="img/ProfileLogInButton.svg"
-								alt="" class="double__img">Log in / Register</a></button>
+					<button href="" class="button__invis log-in__button"><a href=""><img
+								src="images/indexImg/ProfileLogInButton.svg" alt="" class="double__img">Log in /
+							Register</a></button>
 				</div>
 			</div>
 			<div class="header__body">
@@ -52,7 +53,7 @@
 			</div>
 			<div class="header__stats">
 				<div class="stats__block">
-					<p class="numbers stats__numbers">1200</p>
+					<p class="numbers">1200</p>
 					<p class="stats__text">Students graduated</p>
 				</div>
 				<div class="stats__block">
@@ -106,7 +107,7 @@
 					<a href="courses.html">
 						<div class="courses__card card--marketing">
 							<img src="img/JeromeBell__marketing.jpg" alt="" class="card__img">
-							<div class="courses__card__group">
+							<div class="teacher__courses__card__group courses__card__group">
 								<h3 class="card__header card__header--marketing">Marketing</h3>
 								<p class="card__text">The Ultimate Google Ads Training Course</p>
 								<div class="card__group--name--prise">
@@ -228,7 +229,7 @@
 					<div class="event__class">Onine master-class</div>
 				</div>
 				<div class="event__group3">
-					<a href="">
+					<a href="kathrynEvent.html">
 						<div class="event__button button--clear">View more</div>
 					</a>
 				</div>
@@ -243,7 +244,7 @@
 					<div class="event__class">Onine lecture</div>
 				</div>
 				<div class="event__group3">
-					<a href="">
+					<a href="kathrynEvent.html">
 						<div class="event__button button--clear">View more</div>
 					</a>
 				</div>
@@ -259,14 +260,15 @@
 					<div class="event__class">Onine workshop</div>
 				</div>
 				<div class="event__group3">
-					<a href="">
+					<a href="kathrynEvent.html">
 						<div class="event__button button--clear">View more</div>
 					</a>
 				</div>
 			</div>
 			<div class="footer-bigue">
 				<p class="footer__text-bigue">Do you want more?</p>
-				<a href=""><button class="button footer__button-bigue button--gradient">Explore all events</button></a>
+				<a href="events.html"><button class="button footer__button-bigue button--gradient">Explore all
+						events</button></a>
 			</div>
 		</div>
 	</div>
@@ -479,7 +481,7 @@
 					<p class="text-small">Our blog</p>
 					<h2 class="header__text blog__header__text">Latest posts</h2>
 				</div>
-				<a href=""><button class="button button--gradient blog__button">Go to blog</button></a>
+				<a href="blog.html"><button class="button button--gradient blog__button">Go to blog</button></a>
 			</div>
 			<div class="blog__body">
 				<div class="blog__listens">
@@ -557,16 +559,16 @@
 					<div class="footer__info_group2">
 						<h3 class="footer__h3">SITE MAP</h3>
 						<ul class="footer__ul">
-							<a href="">
+							<a href="aboutUs.html">
 								<li class="footer__li">About Us</li>
 							</a>
 							<a href="courses.html">
 								<li class="footer__li">Courses</li>
 							</a>
-							<a href="">
+							<a href="events.html">
 								<li class="footer__li">Events</li>
 							</a>
-							<a href="">
+							<a href="blog.html">
 								<li class="footer__li">Blog</li>
 							</a>
 							<a href="">
