--- a/courses.html
+++ b/courses.html
@@ -16,10 +16,10 @@
 			<div class="navBar__group1">
 				<a href="index.html"><img src="img/logo.svg" alt="" class="logo navBar__logo"></a>
 				<ul class="navBar__menu">
-					<li><a href="" class="navBar__text">About Us</a></li>
+					<li><a href="aboutUs.html" class="navBar__text">About Us</a></li>
 					<li><a href="" class="navBar__text our__navBAr__text">Courses</a></li>
-					<li><a href="" class="navBar__text">Events</a></li>
-					<li><a href="" class="navBar__text">Blog</a></li>
+					<li><a href="events.html" class="navBar__text">Events</a></li>
+					<li><a href="blog.html" class="navBar__text">Blog</a></li>
 					<li><a href="" class="navBar__text">Contacts</a></li>
 				</ul>
 			</div>
@@ -46,7 +46,7 @@
 				<input type="text" class="search__courses" placeholder="Search course...">
 			</div>
 			<div class="our__courses__cards our__courses__card">
-				<a href="courses.html">
+				<a href="codyFisher__courses.html">
 					<div class="our__courses__card card--marketing">
 						<img src="img/our__jeromeBell.png" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
@@ -59,7 +59,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="courses.html">
+				<a href="codyFisher__courses.html">
 					<div class="our__courses__card  card--managment">
 						<img src="img/our__Marvin.jpg" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
@@ -72,7 +72,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="courses.html">
+				<a href="codyFisher__courses.html">
 					<div class="our__courses__card card--hr">
 						<img src="img/our__leslie.jpg" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
@@ -85,7 +85,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="courses.html">
+				<a href="codyFisher__courses.html">
 					<div class="our__courses__card card--marketing">
 						<img src="img/our__kristin.jpg" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
@@ -98,7 +98,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="courses.html">
+				<a href="codyFisher__courses.html">
 					<div class="our__courses__card card--design">
 						<img src="img/our__guy.jpg" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
@@ -111,7 +111,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="courses.html">
+				<a href="codyFisher__courses.html">
 					<div class="our__courses__card card--managment">
 						<img src="img/our__dianne.jpg" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
@@ -124,7 +124,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="courses.html">
+				<a href="codyFisher__courses.html">
 					<div class="our__courses__card ">
 						<img src="img/our__brooklyn.jpg" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
@@ -137,7 +137,7 @@
 						</div>
 					</div>
 				</a>
-				<a href="courses.html">
+				<a href="codyFisher__courses.html">
 					<div class="our__courses__card card--managment">
 						<img src="img/our__kathryn.jpg" alt="" class="our__card__img">
 						<div class="our__courses__card__group">
@@ -216,16 +216,16 @@
 				<div class="footer__info_group2">
 					<h3 class="footer__h3">SITE MAP</h3>
 					<ul class="footer__ul">
-						<a href="">
+						<a href="aboutUs.html">
 							<li class="footer__li">About Us</li>
 						</a>
-						<a href="courses.html">
+						<a href="">
 							<li class="footer__li">Courses</li>
 						</a>
-						<a href="">
+						<a href="events.html">
 							<li class="footer__li">Events</li>
 						</a>
-						<a href="">
+						<a href="blog.html">
 							<li class="footer__li">Blog</li>
 						</a>
 						<a href="">
