--- a/codyFisher__courses.html
+++ b/codyFisher__courses.html
@@ -17,10 +17,10 @@
 			<div class="navBar__group1">
 				<a href="index.html"><img src="img/logo.svg" alt="" class="logo navBar__logo"></a>
 				<ul class="navBar__menu">
-					<li><a href="" class="navBar__text">About Us</a></li>
-					<li><a href="" class="navBar__text our__navBAr__text">Courses</a></li>
-					<li><a href="" class="navBar__text">Events</a></li>
-					<li><a href="" class="navBar__text">Blog</a></li>
+					<li><a href="aboutUs.html" class="navBar__text">About Us</a></li>
+					<li><a href="courses.html" class="navBar__text our__navBAr__text">Courses</a></li>
+					<li><a href="events.html" class="navBar__text">Events</a></li>
+					<li><a href="blog.html" class="navBar__text">Blog</a></li>
 					<li><a href="" class="navBar__text">Contacts</a></li>
 				</ul>
 			</div>
@@ -235,8 +235,6 @@
 		</div>
 	</div>
 	<!--
-
-	
 	<div class="our__container">
 		<div class="teacher__otherCourses">
 			<p class="text-small">Check other courses</p>
@@ -350,16 +348,16 @@
 				<div class="footer__info_group2">
 					<h3 class="footer__h3">SITE MAP</h3>
 					<ul class="footer__ul">
-						<a href="">
+						<a href="aboutUs.html">
 							<li class="footer__li">About Us</li>
 						</a>
 						<a href="courses.html">
 							<li class="footer__li">Courses</li>
 						</a>
-						<a href="">
+						<a href="events.html">
 							<li class="footer__li">Events</li>
 						</a>
-						<a href="">
+						<a href="blog.html">
 							<li class="footer__li">Blog</li>
 						</a>
 						<a href="">
@@ -404,7 +402,7 @@
 		</div>
 	</footer>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script src="script/script.js"></script>
+	<script src="script/codyFisher__courses.js"></script>
 </body>
 
 </html>
